# colony

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benches.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: flag_guard.rs  generation_guard.rs  no_guard.rs
src/: doc.md  guard.rs  index_opt.rs  iter.rs  lib.rs  skipfield.rs
